@@ -1,9 +1,10 @@
 -server
--Xmx4G
+-Xmx16G
+-XX:-UseBiasedLocking
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
--XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
+-XX:+UseGCOverheadLimit
 -Djdk.attach.allowAttachSelf=true
